--- a/css/raw/black.css
+++ b/css/raw/black.css
@@ -1335,9 +1335,15 @@ ts-message .reply_bar:hover { background: #222; border-color: #000; }
 
 .p-message_pane__foreword__description, .p-message_pane__limited_history_alert { color: #e6e6e6; }
 
-.p-message_pane__limited_history_foreword { background: #363636; background-image: none; color: #e6e6e6; }
+.p-message_pane__foreword__notification_warning { background: #363636; }
 
-.p-message_pane__unread_banner__banner { background: #545454; text-shadow: 0 1px rgba(0, 0, 0, 0.15); }
+.p-message_pane__unread_banner__banner, .p-message_pane__unread_banner__close { background: #545454; text-shadow: 0 1px rgba(0, 0, 0, 0.15); }
+
+.p-message_pane__unread_banner__banner:hover, .p-message_pane__unread_banner__close:hover { background: #424242; }
+
+.p-message_pane__unread_banner__banner--detached, .p-message_pane__unread_banner__close--detached { border-left: 1px solid #363636; }
+
+.p-message_pane__limited_history_foreword { background: #363636; background-image: none; color: #e6e6e6; }
 
 .messages_banner { color: #e6e6e6; text-shadow: 0 1px rgba(0, 0, 0, 0.15); }
 
