--- a/css/raw/variants/arc-dark.css
+++ b/css/raw/variants/arc-dark.css
@@ -1335,9 +1335,15 @@ ts-message .reply_bar:hover { background: #404552; border-color: #1d2027; }
 
 .p-message_pane__foreword__description, .p-message_pane__limited_history_alert { color: #d3dae3; }
 
-.p-message_pane__limited_history_foreword { background: #2a2f39; background-image: none; color: #d3dae3; }
+.p-message_pane__foreword__notification_warning { background: #2a2f39; }
 
-.p-message_pane__unread_banner__banner { background: #6b6f79; text-shadow: 0 1px rgba(0, 0, 0, 0.15); }
+.p-message_pane__unread_banner__banner, .p-message_pane__unread_banner__close { background: #6b6f79; text-shadow: 0 1px rgba(0, 0, 0, 0.15); }
+
+.p-message_pane__unread_banner__banner:hover, .p-message_pane__unread_banner__close:hover { background: #454c5c; }
+
+.p-message_pane__unread_banner__banner--detached, .p-message_pane__unread_banner__close--detached { border-left: 1px solid #2a2f39; }
+
+.p-message_pane__limited_history_foreword { background: #2a2f39; background-image: none; color: #d3dae3; }
 
 .messages_banner { color: #d3dae3; text-shadow: 0 1px rgba(0, 0, 0, 0.15); }
 
