--- a/css/raw/variants/midnight-blue-monospaced.css
+++ b/css/raw/variants/midnight-blue-monospaced.css
@@ -1261,7 +1261,7 @@ ts-mention { background: rgba(48, 48, 48, 0.1) !important; color: #00b9f2 !impor
 
 .file_container:hover, .file_container:focus, .file_container.file_menu_open, .c-file_container:hover, .c-file_container:focus, .c-file_container.file_menu_open { border-bottom-color: #181818; border-left-color: #181818; border-right-color: #181818; }
 
-.file_container::after, .file_container.post_container::after, .c-file_container::after, .c-file_container.post_container::after { background-image: -webkit-linear-gradient(top, transparent 0, #000 100%); background-image: -moz-linear-gradient(top, transparent 0, #000 100%); background-image: -o-linear-gradient(top, transparent 0, #000 100%); background-image: linear-gradient(top, transparent 0, #000 100%); }
+.file_container::after, .file_container.post_container::after, .c-file_container::after, .c-file_container.post_container::after { background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0, #000 100%); background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0, #000 100%); background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0, #000 100%); background-image: linear-gradient(top, rgba(0, 0, 0, 0) 0, #000 100%); }
 
 .file_container.generic_container .file_header_icon .ts_icon, .c-file_container.generic_container .file_header_icon .ts_icon { background: #000; box-shadow: 0 0 0 3px #000; color: #00b9f2; }
 
@@ -1335,9 +1335,15 @@ ts-message .reply_bar:hover { background: #000; border-color: #101010; }
 
 .p-message_pane__foreword__description, .p-message_pane__limited_history_alert { color: #00b9f2; }
 
-.p-message_pane__limited_history_foreword { background: #181818; background-image: none; color: #00b9f2; }
+.p-message_pane__foreword__notification_warning { background: #181818; }
 
-.p-message_pane__unread_banner__banner { background: #282828; text-shadow: 0 1px rgba(0, 0, 0, 0.15); }
+.p-message_pane__unread_banner__banner, .p-message_pane__unread_banner__close { background: #282828; text-shadow: 0 1px rgba(0, 0, 0, 0.15); }
+
+.p-message_pane__unread_banner__banner:hover, .p-message_pane__unread_banner__close:hover { background: #202020; }
+
+.p-message_pane__unread_banner__banner--detached, .p-message_pane__unread_banner__close--detached { border-left: 1px solid #181818; }
+
+.p-message_pane__limited_history_foreword { background: #181818; background-image: none; color: #00b9f2; }
 
 .messages_banner { color: #00b9f2; text-shadow: 0 1px rgba(0, 0, 0, 0.15); }
 
@@ -3636,7 +3642,7 @@ nav#api_nav { background: transparent; text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25
 
 .splash_interactive__window:hover .splash_interactive__window_headline { color: #00b9f2; }
 
-.splash_interactive__window::after { background: linear-gradient(to bottom, transparent 0, #000 100%); }
+.splash_interactive__window::after { background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0, #000 100%); }
 
 .splash_interactive__window_response { background-color: #fff; }
 
@@ -3702,7 +3708,7 @@ a.splash_interactive__window_link { color: #00b9f2; }
 
 #page .app_desc_btn { background-color: #282828; color: #00b9f2; }
 
-#page .app_desc_expand_showing .app_profile_desc_fade { background: linear-gradient(180deg, transparent 0, #000 100%); }
+#page .app_desc_expand_showing .app_profile_desc_fade { background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0, #000 100%); }
 
 #page .service_panel { background-color: #181818; }
 
