--- a/css/variants/arc-dark.css
+++ b/css/variants/arc-dark.css
@@ -668,8 +668,11 @@
   .p-message_pane .c-message_list.c-virtual_list--scrollbar > .c-scrollbar__hider::before { background: #404552; border-bottom: 1px solid #404552; }
   .p-message_pane .p-message_pane__top_banners:not(:empty) + div .c-message_list:not(.c-virtual_list--scrollbar):before, .p-message_pane .p-message_pane__top_banners:not(:empty) + div .c-message_list.c-virtual_list--scrollbar > .c-scrollbar__hider:before { box-shadow: 0 32px #404552; }
   .p-message_pane__foreword__description, .p-message_pane__limited_history_alert { color: #d3dae3; }
+  .p-message_pane__foreword__notification_warning { background: #2a2f39; }
+  .p-message_pane__unread_banner__banner, .p-message_pane__unread_banner__close { background: #6b6f79; text-shadow: 0 1px rgba(0, 0, 0, 0.15); }
+  .p-message_pane__unread_banner__banner:hover, .p-message_pane__unread_banner__close:hover { background: #454c5c; }
+  .p-message_pane__unread_banner__banner--detached, .p-message_pane__unread_banner__close--detached { border-left: 1px solid #2a2f39; }
   .p-message_pane__limited_history_foreword { background: #2a2f39; background-image: none; color: #d3dae3; }
-  .p-message_pane__unread_banner__banner { background: #6b6f79; text-shadow: 0 1px rgba(0, 0, 0, 0.15); }
   .messages_banner { color: #d3dae3; text-shadow: 0 1px rgba(0, 0, 0, 0.15); }
   .messages_banner a { color: #d3dae3; }
   .messages_banner a:hover { color: #d3dae3; }
