--- a/css/variants/aubergine.css
+++ b/css/variants/aubergine.css
@@ -668,8 +668,11 @@
   .p-message_pane .c-message_list.c-virtual_list--scrollbar > .c-scrollbar__hider::before { background: #3e313c; border-bottom: 1px solid #3e313c; }
   .p-message_pane .p-message_pane__top_banners:not(:empty) + div .c-message_list:not(.c-virtual_list--scrollbar):before, .p-message_pane .p-message_pane__top_banners:not(:empty) + div .c-message_list.c-virtual_list--scrollbar > .c-scrollbar__hider:before { box-shadow: 0 32px #3e313c; }
   .p-message_pane__foreword__description, .p-message_pane__limited_history_alert { color: #f0d9ed; }
+  .p-message_pane__foreword__notification_warning { background: #4d394b; }
+  .p-message_pane__unread_banner__banner, .p-message_pane__unread_banner__close { background: #61485e; text-shadow: 0 1px rgba(0, 0, 0, 0.15); }
+  .p-message_pane__unread_banner__banner:hover, .p-message_pane__unread_banner__close:hover { background: #4a3b49; }
+  .p-message_pane__unread_banner__banner--detached, .p-message_pane__unread_banner__close--detached { border-left: 1px solid #4d394b; }
   .p-message_pane__limited_history_foreword { background: #4d394b; background-image: none; color: #f0d9ed; }
-  .p-message_pane__unread_banner__banner { background: #61485e; text-shadow: 0 1px rgba(0, 0, 0, 0.15); }
   .messages_banner { color: #f0d9ed; text-shadow: 0 1px rgba(0, 0, 0, 0.15); }
   .messages_banner a { color: #f0d9ed; }
   .messages_banner a:hover { color: #f0d9ed; }
