fix direct message contact highlight

--- a/css/black.css
+++ b/css/black.css
@@ -1301,7 +1301,7 @@
   #im_browser .im_browser_row.multiparty .member_image + .member_image:not(.ra):not(.ura) { border: 2px solid #000; }
   #im_browser .im_browser_row .im_unread_cnt { background: #bf360c; color: #e6e6e6; }
   #im_browser .im_browser_row.disabled { color: #949494; }
-  #im_browser #im_list_container:not(.keyboard_active).not_scrolling .im_browser_row:not(.disabled_dm):hover, #im_browser #im_browser .im_browser_row.highlighted { background: #000 !important; border: 1px solid #545454 !important; }
+  #im_browser #im_list_container:not(.keyboard_active).not_scrolling .im_browser_row:not(.disabled_dm):hover, #im_browser .im_browser_row.highlighted { background: #000 !important; border: 1px solid #545454 !important; }
   #im_browser_tokens { background: #545454; border: 1px solid #828282; }
   #im_browser_tokens.active { border-color: #828282; box-shadow: 0 0 7px rgba(130, 130, 130, 0.15); }
   #im_browser_tokens .member_token { background: #222; border: 1px solid #000; color: #e6e6e6; }
