--- a/css/raw/variants/midnight-blue.css
+++ b/css/raw/variants/midnight-blue.css
@@ -2601,7 +2601,7 @@ a.c-member_slug--mention, a.c-member_slug--mention:hover { background-color: #ff
 
 #im_browser .im_browser_row.disabled { color: #1793d1; }
 
-#im_browser #im_list_container:not(.keyboard_active).not_scrolling .im_browser_row:not(.disabled_dm):hover, #im_browser #im_browser .im_browser_row.highlighted { background: #101010 !important; border: 1px solid #282828 !important; }
+#im_browser #im_list_container:not(.keyboard_active).not_scrolling .im_browser_row:not(.disabled_dm):hover, #im_browser .im_browser_row.highlighted { background: #101010 !important; border: 1px solid #282828 !important; }
 
 #im_browser_tokens { background: #282828; border: 1px solid #303030; }
 
