--- a/scss/modules/inputs/_base.scss
+++ b/scss/modules/inputs/_base.scss
@@ -320,6 +320,10 @@ textarea {
   border-top-color: $base-font-color;
 }
 
+.c-button--primary {
+  background: $color-green-dark;
+}
+
 .input_note {
   color: $base-font-color;
 }
