--- a/scss/modules/menu/_team.scss
+++ b/scss/modules/menu/_team.scss
@@ -1,5 +1,5 @@
 #team_menu {
-  background: $color-shade-dark;
+  background: $color-shade-darker;
   border-bottom: 2px solid $color-shade-dark;
   color: $base-font-color;
 
