--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,6 +7,7 @@
 @import "layout/sidebar";
 
 @import "modules/loader";
+@import "modules/dialog";
 
 @import "modules/inputs/base";
 @import "modules/inputs/filter-select";
